--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Metaverse poodle.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Metaverse poodle.data.br",
-        frameworkUrl: buildUrl + "/Metaverse poodle.framework.js.br",
-        codeUrl: buildUrl + "/Metaverse poodle.wasm.br",
+        dataUrl: buildUrl + "/Metaverse poodle.data.unityweb",
+        frameworkUrl: buildUrl + "/Metaverse poodle.framework.js.unityweb",
+        codeUrl: buildUrl + "/Metaverse poodle.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "NoodlePoodle",
