--- a/index.html
+++ b/index.html
@@ -1,28 +1,1 @@
-<!DOCTYPE html>
-<html lang="">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="icon" href="/favicon.ico">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <link href="https://unpkg.com/nes.css@latest/css/nes.min.css" rel="stylesheet">
-    <title>Pluto Vault</title>
-    <link href="/css/app.8a5db97f.css" rel="preload" as="style">
-    <link href="/js/app.7656a1c1.js" rel="preload" as="script">
-    <link href="/js/chunk-vendors.4fadfe7d.js" rel="preload" as="script">
-    <link href="/css/app.8a5db97f.css" rel="stylesheet">
-    </head>
-<body>
-    <noscript>
-        <strong>We're sorry but app doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app">
-    </div>
-    <script src="/js/chunk-vendors.4fadfe7d.js"></script>
-    <script src="/js/app.7656a1c1.js">
-    </script>
-</body>
-</html>
+<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"><link href="https://unpkg.com/nes.css@latest/css/nes.min.css" rel="stylesheet"><title>Pluto Vault</title><link href="/css/app.b86fb990.css" rel="preload" as="style"><link href="/js/app.740df872.js" rel="preload" as="script"><link href="/js/chunk-vendors.4fadfe7d.js" rel="preload" as="script"><link href="/css/app.b86fb990.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but app doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/js/chunk-vendors.4fadfe7d.js"></script><script src="/js/app.740df872.js"></script></body></html>
