--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
             text-align: center;
             color: WHITE;
         }
-        p {
+        p2 {
             text-align: center;
             color: white;
             font-size: 60px;
@@ -32,7 +32,7 @@
 
     <h1 class="center">Wen Mint?</h1>
 
-    <p id="demo"></p>
+    <p2 id="demo"></p2>
 
     <script>
         // Set the date we're counting down to
