--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <h1 class="center">Wen Mint?</h1>
 
-    <p2 id="demo"></p2>
+    <p2 class="center" id="demo"></p2>
 
     <script>
         // Set the date we're counting down to
