--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
             text-align: center;
             color: WHITE;
         }
-        .p2 {
+        .p {
             text-align: center;
             color: white;
-            font-size: 60px;
             margin-top: 0px;
         }
     </style>
@@ -32,7 +31,7 @@
 
     <h1 class="center">Wen Mint?</h1>
 
-    <p2 class="p2" id="demo"></p2>
+    <p id="demo"></p>
 
     <script>
         // Set the date we're counting down to
