--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <h1 class="center">Wen Mint?</h1>
 
-    <p id="demo"></p>
+    <p class="center" id="demo"></p>
 
     <script>
         // Set the date we're counting down to
