--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             // If the count down is over, write some text
             if (distance < 0) {
                 clearInterval(x);
-                document.getElementById("demo").innerHTML = "EXPIRED";
+                document.getElementById("demo").innerHTML = "MINT LIVE";
             }
         }, 1000);
     </script>
